test: enable integration tests with tagging and GitHub Actions support
- Mark integration test files with  build tags.
- Update test logic to separate integration tests from unit tests.
- Modify GitHub Actions workflow to include integration tests using the  flag.
- Add documentation on running integration tests locally and in CI pipelines.

This commit ensures a clear separation of integration tests and provides seamless execution in both local and CI environments.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  test:
+  unit-tests:
     name: Run Tests
     runs-on: ubuntu-latest
 
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.23' # Update this to match your Go version
+          go-version: '1.23'
 
       # Step 3: Install dependencies
       - name: Install dependencies
@@ -39,3 +39,47 @@ jobs:
         with:
           name: test-results
           path: '**/test-report.xml'
+
+  integration-tests:
+    name: Run Integration Tests
+    runs-on: ubuntu-latest
+
+    services:
+      apicurio:
+        image: apicurio/apicurio-registry:3.0.5
+        ports:
+          - 9080:8080
+        options: >-
+          --env APICURIO_REST_DELETION_ARTIFACT_ENABLED=true
+          --env APICURIO_REST_DELETION_ARTIFACT_VERSION_ENABLED=true
+          --env APICURIO_REST_DELETION_GROUP_ENABLED=true
+
+    steps:
+      # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Set up Go environment
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: go mod tidy
+
+      # Wait for Apicurio Registry to start
+      - name: Wait for Apicurio Registry
+        run: |
+          for i in {1..30}; do
+            if curl -s http://localhost:9080/health || [ $i -eq 30 ]; then
+              break
+            fi
+            echo "Waiting for Apicurio Registry to be ready..."
+            sleep 2
+          done
+
+      # Run integration tests
+      - name: Run integration tests
+        run: go test ./... -run Integration -v
