test: add integration tests for versions api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
       QUARKUS_HTTP_CORS_ORIGINS: '*' # Allow CORS from all origins
+      APICURIO_REST_MUTABILITY_ARTIFACT_VERSION_CONTENT_ENABLED: "true"
       APICURIO_REST_DELETION_ARTIFACT_ENABLED: "true"
       APICURIO_REST_DELETION_ARTIFACT_VERSION_ENABLED: "true"
       APICURIO_REST_DELETION_GROUP_ENABLED: "true"
